feat: добавлен бонус фрукт